currentError.txt
In file included from c:\Users\NoName\Desktop\project\main.c:5:
c:\Users\NoName\Desktop\project\structures.c:4:8: error: redefinition of 'struct Card'
    4 | struct Card {
      |        ^~~~
In file included from c:\Users\NoName\Desktop\project\deck.c:4,
                 from c:\Users\NoName\Desktop\project\main.c:4:
c:\Users\NoName\Desktop\project\structures.c:4:8: note: originally defined here
    4 | struct Card {
      |        ^~~~
In file included from c:\Users\NoName\Desktop\project\main.c:5:
c:\Users\NoName\Desktop\project\structures.c:9:8: error: redefinition of 'struct Human'
    9 | struct Human {
      |        ^~~~~
In file included from c:\Users\NoName\Desktop\project\deck.c:4,
                 from c:\Users\NoName\Desktop\project\main.c:4:
c:\Users\NoName\Desktop\project\structures.c:9:8: note: originally defined here
    9 | struct Human {
      |        ^~~~~
c:\Users\NoName\Desktop\project\main.c: In function 'main':
c:\Users\NoName\Desktop\project\main.c:16:20: warning: passing argument 1 of 'initializeDeck' from incompatible pointer type [-Wincompatible-pointer-types]
   16 |     initializeDeck(deck);  //Δίνει τιμές στον πίνακα deck[] που αρχικά ήταν άδειος.
      |                    ^~~~
      |                    |
      |                    struct Card *
In file included from c:\Users\NoName\Desktop\project\main.c:4:
c:\Users\NoName\Desktop\project\deck.c:15:33: note: expected 'struct Card *' but argument is of type 'struct Card *'
   15 | void initializeDeck(struct Card deck[]) {
      |                     ~~~~~~~~~~~~^~~~~~
c:\Users\NoName\Desktop\project\main.c:17:5: warning: implicit declaration of function 'printDeck' [-Wimplicit-function-declaration]
   17 |     printDeck(deck);
      |     ^~~~~~~~~
c:\Users\NoName\Desktop\project\main.c:19:5: warning: implicit declaration of function 'seperate' [-Wimplicit-function-declaration]
   19 |     seperate();
      |     ^~~~~~~~
c:\Users\NoName\Desktop\project\main.c:21:13: warning: passing argument 1 of 'shuffle' from incompatible pointer type [-Wincompatible-pointer-types]
   21 |     shuffle(deck);
      |             ^~~~
      |             |
      |             struct Card *
In file included from c:\Users\NoName\Desktop\project\main.c:4:
c:\Users\NoName\Desktop\project\deck.c:40:26: note: expected 'struct Card *' but argument is of type 'struct Card *'
   40 | void shuffle(struct Card deck[]) {
      |              ~~~~~~~~~~~~^~~~~~